k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpu-tracking-web-ui
  namespace: operators
  annotations:
    # Use haproxy-ingress.github.io annotations (NOT haproxy.org)
    ingress.kubernetes.io/ssl-redirect: "true"
    haproxy-ingress.github.io/proxy-body-size: "1m"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - nrp-gpu.nrp-nautilus.io
      secretName: gpu-tracking-tls
  rules:
    - host: nrp-gpu.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpu-tracking-web-ui
                port:
                  name: http
